--- a/.htaccess
+++ b/.htaccess
@@ -19,3 +19,6 @@ RewriteCond %{REQUEST_FILENAME} !-d
 
 # Rewrite all other URLs to index.php/URL
 RewriteRule .* index.php/$0 [PT]
+
+php_value post_max_size 30M
+php_value upload_max_filesize 30M
